fix sparkle and list spacing so they align

--- a/styles.scss
+++ b/styles.scss
@@ -630,14 +630,14 @@ h1 {
           .sparkle_container {
             display: flex;
             flex-direction: column;
-            gap: 10px;
-
-            .beige_sparkle {
-              width: 100%;
-              max-width: 28px;
-            }
+            gap: 19px;
 
             
+          }
+          .beige_sparkle {
+            width: 100%;
+            max-width: 28px;
+            margin-top: 5px;
           }
 
           ul {
@@ -645,6 +645,10 @@ h1 {
           }
           li {
             font-family: $body;
+            font-weight: 500;
+            font-size: 26px;
+            margin-bottom: 17px;
+            margin-left: 15px;
           }
         }
       }
